//
// Copyright 2019 Wireline, Inc.
//

syntax = "proto3";

package wirelineio.credential;

//
// Genesis block written on the creation of an item.
// Establishes authority of item.
//
message ItemGenesis {

  // Item Type.
  required string type = 1;

  // Item Key.
  required string key = 2;

  // Public Key of item owner.
  required string ownerKey = 3;

  // Signature.
  required string signature = 4;

  // TODO(ashwin): Add optional ANY for app-specific extensions.
}

//
// Genesis block written on the creation of a party (to the first feed).
// Establishes authority of party.
//
message PartyGenesis {

  // Set to 'wrn:protobuf:wirelineio.credential.PartyGenesis'.
  required string type = 1;

  // Party Key.
  required string partyKey = 2;

  // Public Key of party owner.
  required string ownerKey = 3;

  // Feed key (of the first feed in the Party).
  required string feedKey = 4;

  // Signature.
  required string signature = 5;
}

//
// Genesis block written on the creation of a feed.
// Establishes authority of feed.
//
message FeedGenesis {

  // Set to 'wrn:protobuf:wirelineio.credential.FeedGenesis'.
  required string type = 1;

  // Feed key.
  required string feedKey = 2;

  // Public Key of feed owner.
  required string ownerKey = 3;

  // Party Key.
  required string partyKey = 4;

  // Signature.
  required string signature = 5;
}

//
// Auth challenge request/response.
// Used to prove control over an identity (public key).
//
message Auth {

  // Set to 'wrn:protobuf:wirelineio.credential.Auth'.
  required string type = 1;

  // Public Key.
  required string key = 2;

  // Nonce provided by the challenger.
  required int32 nonce = 3;

  // Signature using the Private Key.
  // Populated only if this is an auth response.
  string signature = 4;
}
